# talks

./: Makefile  accValid.hs  flagEx.hs  jams.hs  maybe.hs  notes.md  optex.hs  parsex.hs  refactor.hs  semigroups.md  slides.md
acc/: acc.cabal  applicDo.hs
acc/src/: Main.hs
address/: address.cabal  address.hs
address/src/: Main.hs
optex/: optex.cabal
optex/src/: Main.hs
profunctors/: build.sh  day1.md  day2.md  day3.md
