name:                optex
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/optex#readme
license:             BSD3
license-file:        LICENSE
author:              Julie Moronuki
maintainer:          argumatron@gmail.com
copyright:           2017 Julie Moronuki
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable optex
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  optparse-applicative
